--- a/css/style.css
+++ b/css/style.css
@@ -315,7 +315,7 @@ input.theme-btn.style-2 {
   font-size: 16px;
   font-style: normal;
   font-weight: 400;
-  line-height: 29px;
+  line-height: 27px;
   letter-spacing: 3.2px;
   padding: 15px 20px;
 }
@@ -81014,6 +81014,7 @@ body.admin-bar .header-area.style-7 {
   justify-content: space-between;
   align-items: flex-end;
   margin-bottom: 60px;
+  margin-top: -6px;
 }
 @media only screen and (min-width: 1200px) and (max-width: 1399px) {
   .section-title {
@@ -81497,15 +81498,14 @@ body.admin-bar .header-area.style-7 {
   transform: translateY(-50%);
 }
 @media (max-width: 1799px) {
+  .slider-area .single-slider .slider-image .slider-image-inner {
+    right: 14%;
+  }
+}
+@media (max-width: 1799px) {
   .slider-area .single-slider .slider-image {
     width: auto;
     margin-top: inherit;
-    right: 20%;
-  }
-}
-@media only screen and (min-width: 1200px) and (max-width: 1399px) {
-  .slider-area .single-slider .slider-image {
-    right: 10%;
   }
 }
 @media (max-width: 1199px) {
@@ -81705,7 +81705,8 @@ body.admin-bar .header-area.style-7 {
 }
 
 .slider-area.style-2 {
-  padding-bottom: 90px;
+  padding-top: 230px;
+  padding-bottom: 130px;
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
@@ -81815,14 +81816,23 @@ body.admin-bar .header-area.style-7 {
   align-items: center;
   justify-content: center;
   border-radius: 50%;
-  width: 108px;
-  height: 108px;
+  width: 100px;
+  height: 100px;
 }
 .slider-area.style-2 .slider-wrapper-two .slick-dots li button {
   width: 108px;
   height: 108px;
   border-radius: 50%;
   overflow: hidden;
+  position: relative;
+}
+.slider-area.style-2 .slider-wrapper-two .slick-dots li button:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(49, 43, 43, 0.6);
+  z-index: 1;
 }
 @media (max-width: 1199px) {
   .slider-area.style-2 .slider-wrapper-two .slick-dots li button {
@@ -81841,8 +81851,8 @@ body.admin-bar .header-area.style-7 {
   height: 100%;
 }
 .slider-area.style-2 .slider-wrapper-two .slick-dots li.slick-active button {
-  width: 100px;
-  height: 100px;
+  width: 82px;
+  height: 82px;
 }
 @media (max-width: 1199px) {
   .slider-area.style-2 .slider-wrapper-two .slick-dots li.slick-active button {
@@ -85935,10 +85945,6 @@ body.admin-bar .header-area.style-7 {
   transition: all 0.5s ease-out;
 }
 
-.blog-details-wrapper .comment-respond {
-  margin-top: 72px;
-  margin-bottom: 40px;
-}
 .blog-details-wrapper .wp-block-group.has-background .wp-block-button .wp-block-button__link {
   color: #ffffff !important;
 }
@@ -86707,6 +86713,7 @@ body.admin-bar .header-area.style-7 {
   justify-content: space-between;
   align-items: flex-end;
   margin-bottom: 60px;
+  margin-top: -6px;
 }
 @media only screen and (min-width: 1200px) and (max-width: 1399px) {
   .section-title {
@@ -90232,7 +90239,7 @@ ul.children {
 }
 
 .slider-area {
-  padding-bottom: 60px;
+  padding-bottom: 75px;
 }
 .slider-area .checknow-form {
   padding-top: 154px;
@@ -90930,7 +90937,7 @@ ul.children {
 .video-popup-area.style-1 {
   position: relative;
 }
-.video-popup-area.style-1 .shape {
+.video-popup-area.style-1 .outer-shape {
   position: absolute;
   left: 96px;
   bottom: 140px;
@@ -91218,6 +91225,24 @@ ul.children {
   position: relative;
   background-color: rgba(49, 43, 43, 0.9215686275);
 }
+@media only screen and (min-width: 992px) and (max-width: 1199px) {
+  .testimonial-slider-area.style-2 {
+    padding-top: 100px;
+    padding-bottom: 100px;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .testimonial-slider-area.style-2 {
+    padding-top: 80px;
+    padding-bottom: 80px;
+  }
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .testimonial-slider-area.style-2 {
+    padding-top: 60px;
+    padding-bottom: 60px;
+  }
+}
 .testimonial-slider-area.style-2 .bg-image {
   position: absolute;
   top: 0;
@@ -91229,6 +91254,16 @@ ul.children {
 .testimonial-slider-area.style-2 .bg-image img {
   width: 100%;
   height: 100%;
+}
+.testimonial-slider-area.style-2 .slick-list {
+  padding-top: 40px;
+  padding-bottom: 40px;
+}
+.testimonial-slider-area.style-2 .slick-list .slick-track {
+  margin-left: -12px;
+}
+.testimonial-slider-area.style-2 .slick-list .testimonial-card {
+  margin-left: 12px;
 }
 .testimonial-slider-area.style-2 .testimonial-card.style-2 {
   transition: all 0.5s ease-out;
@@ -92924,11 +92959,20 @@ ul.children {
   margin-bottom: 30px;
 }
 
+.team-details-area {
+  position: relative;
+}
 .team-details-area .image-wrapper {
   position: relative;
 }
 .team-details-area .image-wrapper img {
   width: 100%;
+}
+.team-details-area .outer-shape {
+  position: absolute;
+  top: 50%;
+  right: 10px;
+  transform: translateY(-50%);
 }
 @media (max-width: 991px) {
   .team-details-area .team-details-wrapper {
@@ -92962,6 +93006,7 @@ ul.children {
   gap: 30px;
 }
 .team-details-area .team-details-wrapper .social-share a i {
+  font-size: 25px;
   color: #808287;
 }
 .team-details-area .team-details-wrapper .content {
@@ -93290,10 +93335,6 @@ ul.children {
 .footer-widget ul {
   padding-left: 0;
 }
-.footer-widget .footer-logo {
-  margin-bottom: 40px;
-  margin-top: -25px;
-}
 .footer-widget.widget_boomdevs-latest-posts-footer {
   margin-top: -5px;
 }
@@ -93330,11 +93371,9 @@ ul.children {
   }
 }
 .footer-widget .footer-widget-info .footer-logo {
-  margin-bottom: 40px;
   display: inline-block;
-  margin-top: -25px;
-  width: 139px;
-  height: 40px;
+  width: 198px;
+  height: 69px;
 }
 .footer-widget .footer-widget-info .footer-logo a img {
   -o-object-fit: cover;
@@ -93466,9 +93505,10 @@ ul.children {
 .footer-widget .footer-widget-contact .footer-contact ul li .contact-text span,
 .footer-widget .footer-widget-contact .footer-contact ul li .contact-text p,
 .footer-widget .footer-widget-contact .footer-contact ul li .contact-text a {
-  font-size: 16px;
-  line-height: 30px;
+  font-size: 20px;
+  font-style: normal;
   font-weight: 400;
+  line-height: 30px;
   display: inline-block;
   width: 100%;
   margin-bottom: 0;
@@ -93642,6 +93682,15 @@ ul.children {
 .subscribe-form-widget {
   position: relative;
 }
+.subscribe-form-widget.style-2 .single-field input {
+  background-color: #f6f6f6;
+}
+.subscribe-form-widget.style-2 .submit-btn {
+  background-color: transparent;
+}
+.subscribe-form-widget.style-2 .submit-btn i {
+  color: #808287;
+}
 .subscribe-form-widget .terms-condition {
   font-size: 14px;
   font-style: normal;
@@ -93714,11 +93763,12 @@ ul.children {
   position: absolute;
   right: 0;
   top: 0;
-  background-color: transparent;
+  background-color: #aa8453;
   height: 100%;
 }
 .subscribe-form-widget .submit-btn i {
   font-size: 30px;
+  color: #ffffff;
 }
 .subscribe-form-widget .submit-btn span {
   display: none;
@@ -93803,6 +93853,7 @@ ul.children {
   font-size: 20px;
 }
 .footer.style-2 .footer-contact .contact span {
+  font-family: "Gilda Display", serif;
   font-size: 20px;
   font-style: normal;
   font-weight: 400;
