--- a/sass/modules/slider/_slider-style-two.scss
+++ b/sass/modules/slider/_slider-style-two.scss
@@ -1,6 +1,7 @@
 .slider-area {
   &.style-2 {
-    padding-bottom: 90px;
+    padding-top: 230px;
+    padding-bottom: 130px;
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -101,13 +102,22 @@
           align-items: center;
           justify-content: center;
           border-radius: 50%;
-          width: 108px;
-          height: 108px;
+          width: 100px;
+          height: 100px;
           button {
             width: 108px;
             height: 108px;
             border-radius: 50%;
             overflow: hidden;
+            position: relative;
+            &:before {
+              content: '';
+              position: absolute;
+              width: 100%;
+              height: 100%;
+              background-color: rgba(49, 43, 43, 0.6);
+              z-index: 1;
+            }
             @include rmaxwd(1199) {
               width: 60px;
               height: 60px;
@@ -123,8 +133,8 @@
           }
           &.slick-active {
             button {
-              width: 100px;
-              height: 100px;
+              width: 82px;
+              height: 82px;
               @include rmaxwd(1199) {
                 width: 50px;
                 height: 50px;
