--- a/sass/partials/_footer-two.scss
+++ b/sass/partials/_footer-two.scss
@@ -35,6 +35,7 @@
           font-size: 20px;
         }
         span {
+          font-family: $heading-font;
           font-size: 20px;
           font-style: normal;
           font-weight: 400;
