--- a/sass/partials/_title-section.scss
+++ b/sass/partials/_title-section.scss
@@ -3,6 +3,7 @@
   justify-content: space-between;
   align-items: flex-end;
   margin-bottom: 60px;
+  margin-top: -6px;
 
   @include xl {
     margin-bottom: 40px;
@@ -172,7 +173,7 @@
   p {
     -webkit-text-stroke-width: 1px;
     -webkit-text-stroke-color: rgba(102, 102, 102, 0.7);
-    font-family: "Gilda Display";
+    font-family: 'Gilda Display';
     font-size: 200px;
     font-style: normal;
     font-weight: 400;
