--- a/css/style.css
+++ b/css/style.css
@@ -81215,6 +81215,16 @@ body.admin-bar .header-area.style-7 {
     transform: translate(0, -10%);
   }
 }
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .banner-text p {
+    font-size: 40px;
+  }
+}
+@media only screen and (min-width: 0px) and (max-width: 576px) {
+  .banner-text p {
+    display: none;
+  }
+}
 
 .slider-area {
   overflow: hidden;
@@ -81222,6 +81232,11 @@ body.admin-bar .header-area.style-7 {
   z-index: 2;
   height: auto;
   padding-top: 275px;
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .slider-area {
+    padding-top: 0;
+  }
 }
 .slider-area .shape {
   position: absolute;
@@ -81620,21 +81635,6 @@ body.admin-bar .header-area.style-7 {
     right: 5%;
   }
 }
-@media (max-width: 1199px) {
-  .slider-area .slider-wrapper .slick-dots,
-  .slider-area .slider-wrapper-two .slick-dots {
-    position: relative;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    bottom: 100px;
-    top: unset;
-    left: unset;
-    right: unset;
-    transform: none;
-    padding: 0;
-  }
-}
 @media (max-width: 991px) {
   .slider-area .slider-wrapper .slick-dots,
   .slider-area .slider-wrapper-two .slick-dots {
@@ -81647,7 +81647,7 @@ body.admin-bar .header-area.style-7 {
   .slider-area .slider-wrapper-two .slick-dots {
     gap: 15px;
     margin-top: 0;
-    transform: translateY(100%);
+    transform: translateY(25%);
   }
 }
 @media (max-width: 575px) {
@@ -81660,6 +81660,12 @@ body.admin-bar .header-area.style-7 {
     left: 0;
     right: 0;
     justify-content: center;
+  }
+}
+@media only screen and (min-width: 768px) and (max-width: 991px) {
+  .slider-area .slider-wrapper .slick-dots,
+  .slider-area .slider-wrapper-two .slick-dots {
+    flex-direction: column;
   }
 }
 .slider-area .slider-wrapper .slick-dots li,
@@ -83156,6 +83162,11 @@ body.admin-bar .header-area.style-7 {
     height: 500px;
   }
 }
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .about-image-card.style-1 .image-wrapper .main-img {
+    width: 350px;
+  }
+}
 .about-image-card.style-1 .image-wrapper .main-img img {
   width: 100%;
   height: 100%;
@@ -83201,6 +83212,12 @@ body.admin-bar .header-area.style-7 {
     height: 80px;
   }
 }
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .about-image-card.style-1 .image-wrapper .main-img .video-popup-btn {
+    right: 50px;
+    top: 30px;
+  }
+}
 .about-image-card.style-1 .image-wrapper .main-img .video-popup-btn i {
   color: #ffffff;
 }
@@ -83215,6 +83232,11 @@ body.admin-bar .header-area.style-7 {
 @media (max-width: 1550px) {
   .about-image-card.style-1 .image-wrapper .square-shape {
     left: 0px;
+  }
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .about-image-card.style-1 .image-wrapper .square-shape {
+    width: 350px;
   }
 }
 
@@ -86914,6 +86936,16 @@ body.admin-bar .header-area.style-7 {
     transform: translate(0, -10%);
   }
 }
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .banner-text p {
+    font-size: 40px;
+  }
+}
+@media only screen and (min-width: 0px) and (max-width: 576px) {
+  .banner-text p {
+    display: none;
+  }
+}
 
 .page-breadcrumb-area {
   padding-top: 232px;
@@ -90587,6 +90619,12 @@ ul.children {
     margin-top: -40px;
   }
 }
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .room_and_suites .room-card-wrapper {
+    margin-top: 0;
+    padding-left: 10px;
+  }
+}
 .room_and_suites .room-card-wrapper .room-card:nth-child(even) {
   margin-top: 80px;
 }
@@ -90666,7 +90704,7 @@ ul.children {
   .testimonial-area .banner-text p {
     transform: translate(0%, -10%);
     letter-spacing: 8px;
-    font-size: 60px;
+    font-size: 40px;
   }
 }
 .testimonial-area .testimonial-slider {
@@ -90728,6 +90766,11 @@ ul.children {
 @media (max-width: 991px) {
   .team-area.style-1 .shape {
     right: 0;
+  }
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .team-area.style-1 .shape {
+    display: none;
   }
 }
 
@@ -90862,6 +90905,11 @@ ul.children {
   top: 0;
   right: 0;
   z-index: 2;
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .feature-and-facilities.style-1 .inner-wrapper .shape {
+    display: none;
+  }
 }
 .feature-and-facilities.style-1 .overlay {
   position: absolute;
@@ -91256,11 +91304,16 @@ ul.children {
   height: 100%;
 }
 .testimonial-slider-area.style-2 .slick-list {
-  padding-top: 40px;
-  padding-bottom: 40px;
+  padding-top: 40px !important;
+  padding-bottom: 40px !important;
 }
 .testimonial-slider-area.style-2 .slick-list .slick-track {
   margin-left: -12px;
+}
+.slick-active .testimonial-slider-area.style-2 .slick-list:nth-child(2) {
+  background-color: #f0f0f0;
+  border: 2px solid #000;
+  transform: scale(1.05);
 }
 .testimonial-slider-area.style-2 .slick-list .testimonial-card {
   margin-left: 12px;
