--- a/sass/modules/about-image-card/_about-image-card-one.scss
+++ b/sass/modules/about-image-card/_about-image-card-one.scss
@@ -16,6 +16,9 @@
           width: 390px;
           height: 500px;
         }
+        @include sm {
+          width: 350px;
+        }
         img {
           width: 100%;
           height: 100%;
@@ -58,6 +61,10 @@
             width: 80px;
             height: 80px;
           }
+          @include sm {
+            right: 50px;
+            top: 30px;
+          }
           i {
             color: $white;
           }
@@ -72,6 +79,9 @@
         border: 1px solid $primary-color;
         @include rmaxwd(1550) {
           left: 0px;
+        }
+        @include sm {
+          width: 350px;
         }
       }
     }
