--- a/sass/modules/slider/_slider-style-one.scss
+++ b/sass/modules/slider/_slider-style-one.scss
@@ -4,6 +4,9 @@
   z-index: 2;
   height: auto;
   padding-top: 275px;
+  @include sm {
+    padding-top: 0;
+  }
 
   .shape {
     position: absolute;
@@ -405,18 +408,18 @@
         right: 5%;
       }
 
-      @include rmaxwd(1199) {
-        position: relative;
-        flex-direction: row;
-        align-items: center;
-        justify-content: center;
-        bottom: 100px;
-        top: unset;
-        left: unset;
-        right: unset;
-        transform: none;
-        padding: 0;
-      }
+      // @include rmaxwd(1199) {
+      //   position: relative;
+      //   flex-direction: row;
+      //   align-items: center;
+      //   justify-content: center;
+      //   bottom: 100px;
+      //   top: unset;
+      //   left: unset;
+      //   right: unset;
+      //   transform: none;
+      //   padding: 0;
+      // }
 
       @include rmaxwd(991) {
         gap: 20px;
@@ -426,7 +429,7 @@
       @include rmaxwd(767) {
         gap: 15px;
         margin-top: 0;
-        transform: translateY(100%);
+        transform: translateY(25%);
       }
 
       @include rmaxwd(575) {
@@ -437,6 +440,9 @@
         left: 0;
         right: 0;
         justify-content: center;
+      }
+      @include md {
+        flex-direction: column;
       }
 
       li {
