--- a/sass/pages/_home-two.scss
+++ b/sass/pages/_home-two.scss
@@ -298,10 +298,21 @@
     }
     .slick-list {
       // overflow: visible;
-      padding-top: 40px;
-      padding-bottom: 40px;
+      padding-top: 40px !important;
+      padding-bottom: 40px !important;
       .slick-track {
         margin-left: -12px;
+        // .slick-slide {
+        //   width: calc(100% / 3) !important; /* 3 items should fit the width */
+        //   max-width: 33.33%;
+        // }
+      }
+      .slick-active &:nth-child(2) {
+        // Add your custom styles here
+        background-color: #f0f0f0;
+        border: 2px solid #000;
+        transform: scale(1.05);
+        // Any other styles you want to apply
       }
       .testimonial-card {
         margin-left: 12px;
