--- a/sass/modules/about-image-card/_about-image-card-one.scss
+++ b/sass/modules/about-image-card/_about-image-card-one.scss
@@ -17,7 +17,9 @@
           height: 500px;
         }
         @include sm {
-          width: 350px;
+          width: 315px;
+          margin-left: 12px;
+          height: 450px;
         }
         img {
           width: 100%;
@@ -28,6 +30,9 @@
           bottom: 0;
           left: 0;
           transform: rotate(270deg) translate(50%, -200%);
+          @include sm {
+            transform: rotate(270deg) translate(50%, 0%);
+          }
           p {
             margin-bottom: 0;
             font-family: $heading-font;
@@ -38,6 +43,9 @@
             letter-spacing: 5px;
             -webkit-text-stroke-width: 1px;
             -webkit-text-stroke-color: var(--white, #fff);
+            @include sm {
+              font-size: 38px;
+            }
           }
         }
         .shape {
@@ -81,7 +89,8 @@
           left: 0px;
         }
         @include sm {
-          width: 350px;
+          width: 312px;
+          height: 490px;
         }
       }
     }
