--- a/sass/modules/checknow/_checknow.scss
+++ b/sass/modules/checknow/_checknow.scss
@@ -11,11 +11,18 @@
     gap: 34px;
     padding: 30px;
     background-color: #3f3f3f;
-
+    @include sm {
+      gap: 20px;
+    }
     .input-wrapper {
       display: flex;
       align-items: center;
       gap: 8px;
+      @include sm {
+        flex-direction: column;
+        width: 100%;
+        align-items: start;
+      }
       input,
       select {
         padding: 16px 20px;
@@ -28,8 +35,8 @@
         line-height: normal;
         letter-spacing: 2.1px;
         width: 290px;
-        @include md {
-          width: auto;
+        @include rmaxwd(991) {
+          width: 100%;
         }
       }
       label {
@@ -40,12 +47,16 @@
         line-height: 29px; /* 181.25% */
         text-transform: uppercase;
       }
-      .date-container {
+      .date-container,
+      .select-container {
         position: relative;
         display: inline-block;
+        @include sm {
+          width: 100%;
+        }
       }
 
-      .date-container input[type="date"] {
+      .date-container input[type='date'] {
         // padding-left: 35px; /* Space for the icon */
         -webkit-appearance: none;
         -moz-appearance: none;
@@ -59,16 +70,16 @@
         transform: translateY(-50%);
         color: $white;
       }
-      input[type="date"]::-webkit-calendar-picker-indicator {
+      input[type='date']::-webkit-calendar-picker-indicator {
         display: none;
         -webkit-appearance: none;
       }
 
-      input[type="date"]::-moz-calendar-picker-indicator {
+      input[type='date']::-moz-calendar-picker-indicator {
         display: none;
       }
 
-      input[type="date"]::-ms-clear {
+      input[type='date']::-ms-clear {
         display: none;
       }
     }
@@ -84,13 +95,8 @@
       appearance: none;
     }
 
-    /* Custom dropdown arrow */
-    .select-container {
-      position: relative;
-    }
-
     .select-container::after {
-      content: "\f078"; /* FontAwesome down arrow */
+      content: '\f078'; /* FontAwesome down arrow */
       font-family: $font-awesome;
       position: absolute;
       right: 20px;
