--- a/sass/modules/about-image-card/_about-image-card-two.scss
+++ b/sass/modules/about-image-card/_about-image-card-two.scss
@@ -13,6 +13,10 @@
           right: 0;
           width: 97px;
           height: 327px;
+          @include sm {
+            width: 70px;
+            height: 220px;
+          }
         }
       }
     }
