--- a/sass/pages/_home-one.scss
+++ b/sass/pages/_home-one.scss
@@ -1042,7 +1042,7 @@
         top: 0;
         right: 0;
         z-index: 2;
-        @include sm {
+        @include rmaxwd(991) {
           display: none;
         }
       }
