--- a/css/style.css
+++ b/css/style.css
@@ -81777,6 +81777,11 @@ body.admin-bar .header-area.style-7 {
   letter-spacing: 9px;
   text-transform: uppercase;
 }
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .slider-area.style-2 .slider-wrapper-two .single-slider .slider-content-wrapper .slider-content .slider-short-title {
+    letter-spacing: 1px;
+  }
+}
 .slider-area.style-2 .slider-wrapper-two .single-slider .slider-content-wrapper .slider-content .slider-title {
   text-transform: capitalize;
 }
@@ -81814,7 +81819,7 @@ body.admin-bar .header-area.style-7 {
   .slider-area.style-2 .slider-wrapper-two .slick-dots {
     position: absolute;
     left: unset;
-    bottom: 42px;
+    bottom: 20px;
   }
 }
 .slider-area.style-2 .slider-wrapper-two .slick-dots li {
@@ -81824,6 +81829,12 @@ body.admin-bar .header-area.style-7 {
   border-radius: 50%;
   width: 100px;
   height: 100px;
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .slider-area.style-2 .slider-wrapper-two .slick-dots li {
+    width: 33px;
+    height: 33px;
+  }
 }
 .slider-area.style-2 .slider-wrapper-two .slick-dots li button {
   width: 108px;
@@ -91123,6 +91134,11 @@ ul.children {
     height: 360px;
   }
 }
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .video-popup-area.style-1 .gift-card {
+    padding: 40px;
+  }
+}
 .video-popup-area.style-1 .gift-card .shape {
   position: absolute;
   bottom: 20px;
@@ -91133,10 +91149,19 @@ ul.children {
     right: 20px;
   }
 }
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .video-popup-area.style-1 .gift-card .shape {
+    right: 12px;
+    bottom: 12px;
+  }
+}
 @media (max-width: 1399px) {
   .video-popup-area.style-1 .gift-card .section-title .sec-desc br {
     display: none;
   }
+}
+.video-popup-area.style-1 .gift-card .section-title .theme-btn-wrapper {
+  margin-top: 40px;
 }
 @media (max-width: 1399px) {
   .video-popup-area.style-1 .image-wrapper {
@@ -91290,6 +91315,11 @@ ul.children {
   right: 50px;
   top: 80px;
 }
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .service-area.style-2 .shape {
+    display: none;
+  }
+}
 
 .price-area.style-1 {
   position: relative;
@@ -91300,6 +91330,11 @@ ul.children {
 @media only screen and (min-width: 1200px) and (max-width: 1399px) {
   .price-area.style-1 {
     padding-bottom: 200px;
+  }
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .price-area.style-1 {
+    padding: 80px 0;
   }
 }
 .price-area.style-1:before {
@@ -91354,6 +91389,11 @@ ul.children {
 
 .checknow-form.styel-2 {
   transform: translateY(-50%);
+}
+@media only screen and (min-width: 0px) and (max-width: 767px) {
+  .checknow-form.styel-2 {
+    transform: translateY(0%);
+  }
 }
 .checknow-form.styel-2 .inner-wrapper {
   background-color: rgba(255, 255, 255, 0.2);
@@ -93481,18 +93521,10 @@ ul.children {
 .footer-widget ul {
   padding-left: 0;
 }
-.footer-widget.widget_boomdevs-latest-posts-footer {
-  margin-top: -5px;
-}
 @media (max-width: 767px) {
   .footer-widget.zoom-instagram-widget {
     margin-bottom: 0;
     margin-top: -10px;
-  }
-}
-@media (max-width: 767px) {
-  .footer-widget.widget_boomdevs_contact_info_widget {
-    margin-bottom: 18px;
   }
 }
 @media only screen and (min-width: 992px) and (max-width: 1399px) {
