--- a/sass/modules/slider/_slider-style-one.scss
+++ b/sass/modules/slider/_slider-style-one.scss
@@ -114,6 +114,7 @@
 
           @include sm {
             font-size: 16px;
+            letter-spacing: 3px;
           }
         }
 
@@ -155,7 +156,7 @@
           }
 
           @include sm {
-            font-size: 32px;
+            font-size: 24px;
             line-height: 42px;
           }
 
