--- a/sass/modules/slider/_slider-style-two.scss
+++ b/sass/modules/slider/_slider-style-two.scss
@@ -107,6 +107,14 @@
           border-radius: 50%;
           width: 100px;
           height: 100px;
+          @include lg {
+            width: 50px;
+            height: 50px;
+          }
+          @include md {
+            width: 50px;
+            height: 50px;
+          }
           @include sm {
             width: 33px;
             height: 33px;
