--- a/sass/partials/_header.scss
+++ b/sass/partials/_header.scss
@@ -8,6 +8,9 @@
     justify-content: space-between;
     align-items: center;
     border-bottom: 1px solid rgba(255, 255, 255, 0.15);
+    @include sm {
+      border-bottom: none;
+    }
 
     .search-btn-with-btn {
       margin-left: unset;
