--- a/sass/partials/_theme-default.scss
+++ b/sass/partials/_theme-default.scss
@@ -282,7 +282,7 @@ input.theme-btn {
     color: $white;
   }
   &.style-2 {
-    border-color: $secondary-color;
+    border-color: $gray;
     color: $black;
     font-size: 16px;
     font-style: normal;
@@ -291,7 +291,7 @@ input.theme-btn {
     letter-spacing: 3.2px;
     padding: 15px 20px;
     &:after {
-      background-color: $secondary-color;
+      background-color: $gray;
     }
   }
   &.style-3 {
