--- a/sass/partials/_title-section.scss
+++ b/sass/partials/_title-section.scss
@@ -195,7 +195,7 @@
       transform: translate(0, -15%);
     }
     @include rmaxwd(1199) {
-      font-size: 120px;
+      font-size: 100px;
       transform: translate(0, -15%);
     }
     @include rmaxwd(991) {
@@ -208,7 +208,8 @@
       font-size: 60px;
     }
     @include xs {
-      display: none;
+      // display: none;
+      font-size: 40px;
     }
   }
 }
